		
2.7		Change the OptionMatcher interface. Warning: this is an API breaking change. Apologies.
		Improved the Option generics.
		Allow protected methods to be annotated.
		
2.7.1	Added a '.jar' extension to the jar file in the deployment. Doh!

2.8.0	Added Options.unsafeGet()

2.9.0	I believe I have improved the performance of the annotation processor by about 15%

2.10.0	Added powerset() methods to FunctionalPrimitives

2.11.0 Write generated methods out in a fixed order
       JEDI-20: Add support for first() taking a filter
       fixed Option.map that would thrown an exception if the supplied function returned null
       added a flatmap to Option

2.12.0 JEDI-21 Added Complement Filter contributed by Toby Watson   
2.13.0 Added Tuples
2.14.0 Did more with Tuples   
2.15.0 Added a typed zip method to FunctionalPrimitives taking two lists, and xor to FirstOrderLogic
2.16.0 Added FirstOrderLogic.xor(Filter, Filter) 
	   Added FunctionalPrimitives.zip(List<A>, List<B>) that returns a List<Tuple2<A, B>> 
2.17.0 Added Coercions.asArray(Class<T> clazz, Collection<T> items)
2.18.0 Added some useful Functor subclasses and clarified the documentation for FunctionalPrimitives.fold
2.18.1 IntelliJ randomnly changed some variables in functional primitives during a rename - well done.
2.18.2 Renamed ConstantFunctor to ConstantFunctor0 and created a new ConstantFunctor - naughty but I don't think anyone would have used ConstantFunctor yet.
2.18.3 Fixing a few minor things. Overloaded the factory methods on ConstantFunctors so that you can statically import more than one with name collisions.
2.18.4 Made Option and Either serializable and fixed the generics for Either
2.19.0 Added Either.cond taking functors to generate the right and left values
2.20.0 Added FunctionalPrimitives.flatmap
2.21.0 Added the ComposeableFunctor
2.22.0 Made the ComposeableFunctor accept more general types