@@ -12,7 +12,7 @@
     <groupId>org.codehaus.jedi</groupId>
     <artifactId>jedi</artifactId>
     <name>Jedi</name>
-    <version>2.20.0</version>
+    <version>2.22.0</version>
     <url>http://jedi.codehaus.org/</url>
     <licenses>
         <license>
